--- a/index.html
+++ b/index.html
@@ -40,29 +40,29 @@
     <form onsubmit="event.preventDefault(); submitVote();">
       <ul class="song-list">
 
-        <li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="A Whole New World – 알라딘" /><a href="https://www.youtube.com/watch?v=XUSjObJku0Q" target="_blank">A Whole New World – 알라딘</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="Bundle of Joy – 인사이드 아웃" /><a href="https://www.youtube.com/watch?v=32lI1Z1MBx0" target="_blank">Bundle of Joy – 인사이드 아웃</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="How Far I’ll Go – 모아나" /><a href="https://www.youtube.com/watch?v=cPAbx5kgCJo" target="_blank">How Far I’ll Go – 모아나</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="I See the Light – 라푼젤" /><a href="https://www.youtube.com/watch?v=ILRs2r6lcHY" target="_blank">I See the Light – 라푼젤</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="Le Festin – 라따뚜이" /><a href="https://www.youtube.com/watch?v=G3lSONLLx70" target="_blank">Le Festin – 라따뚜이</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="Sparkle – 너의 이름은" /><a href="https://www.youtube.com/watch?v=a2GujJZfXpg" target="_blank">Sparkle – 너의 이름은</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="Steal The Show – 엘리멘탈" /><a href="https://www.youtube.com/watch?v=DwuJeGYlYyw" target="_blank">Steal The Show – 엘리멘탈</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="This is me – 위대한 쇼맨" /><a href="https://www.youtube.com/watch?v=h2TLNdaQkL4" target="_blank">This is me – 위대한 쇼맨</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="Try Everything – 주토피아" /><a href="https://www.youtube.com/watch?v=c6rP-YP4c5I" target="_blank">Try Everything – 주토피아</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="Your New Home - The Amazing Digital Cirucs" /><a href="https://www.youtube.com/watch?v=9peSeroXH-s" target="_blank">Your New Home - The Amazing Digital Cirucs</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="すずめ (Suzume) – 스즈메의 문단속" /><a href="https://www.youtube.com/watch?v=Xs0Lxif1u9E" target="_blank">すずめ (Suzume) – 스즈메의 문단속</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="너를 태우고 – 천공의 성 라퓨타" /><a href="https://www.youtube.com/watch?v=D2CRlGawlOI" target="_blank">너를 태우고 – 천공의 성 라퓨타</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="바다가 보이는 마을 – 마녀 배달부 키키" /><a href="https://www.youtube.com/watch?v=zajkxWnnAaI" target="_blank">바다가 보이는 마을 – 마녀 배달부 키키</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="벼랑 위의 포뇨 – 벼랑 위의 포뇨" /><a href="https://www.youtube.com/watch?v=GZXPGv0kOAQ" target="_blank">벼랑 위의 포뇨 – 벼랑 위의 포뇨</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="산책 – 이웃집 토토로" /><a href="https://www.youtube.com/watch?v=YCpDQIi_VDY" target="_blank">산책 – 이웃집 토토로</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="세계의 약속 – 하울의 움직이는 성" /><a href="https://www.youtube.com/watch?v=K1DCI7Fhums" target="_blank">세계의 약속 – 하울의 움직이는 성</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="아시타카의 전설 – 원령공주" /><a href="https://www.youtube.com/watch?v=x8rl5hq6SBA" target="_blank">아시타카의 전설 – 원령공주</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="어느 여름날 – 센과 치히로의 행방불명" /><a href="https://www.youtube.com/watch?v=qbuMbV1Rdo8" target="_blank">어느 여름날 – 센과 치히로의 행방불명</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="오월의 마을 – 이웃집 토토로" /><a href="https://www.youtube.com/watch?v=oAoe-V1jjgw" target="_blank">오월의 마을 – 이웃집 토토로</a></label></li>
-<li><label><input type="checkbox" style="width: 20px; height: 20px;" name="song" value="인생의 회전목마 – 하울의 움직이는 성" /><a href="https://www.youtube.com/watch?v=NXt-YY3Xt8Q" target="_blank">인생의 회전목마 – 하울의 움직이는 성</a></label></li>
+        <li><label><input type="checkbox" name="song" value="A Whole New World – 알라딘" /><a href="https://www.youtube.com/watch?v=XUSjObJku0Q" target="_blank">A Whole New World – 알라딘</a></label></li>
+<li><label><input type="checkbox" name="song" value="Bundle of Joy – 인사이드 아웃" /><a href="https://www.youtube.com/watch?v=32lI1Z1MBx0" target="_blank">Bundle of Joy – 인사이드 아웃</a></label></li>
+<li><label><input type="checkbox" name="song" value="How Far I’ll Go – 모아나" /><a href="https://www.youtube.com/watch?v=cPAbx5kgCJo" target="_blank">How Far I’ll Go – 모아나</a></label></li>
+<li><label><input type="checkbox" name="song" value="I See the Light – 라푼젤" /><a href="https://www.youtube.com/watch?v=ILRs2r6lcHY" target="_blank">I See the Light – 라푼젤</a></label></li>
+<li><label><input type="checkbox" name="song" value="Le Festin – 라따뚜이" /><a href="https://www.youtube.com/watch?v=G3lSONLLx70" target="_blank">Le Festin – 라따뚜이</a></label></li>
+<li><label><input type="checkbox" name="song" value="Sparkle – 너의 이름은" /><a href="https://www.youtube.com/watch?v=a2GujJZfXpg" target="_blank">Sparkle – 너의 이름은</a></label></li>
+<li><label><input type="checkbox" name="song" value="Steal The Show – 엘리멘탈" /><a href="https://www.youtube.com/watch?v=DwuJeGYlYyw" target="_blank">Steal The Show – 엘리멘탈</a></label></li>
+<li><label><input type="checkbox" name="song" value="This is me – 위대한 쇼맨" /><a href="https://www.youtube.com/watch?v=h2TLNdaQkL4" target="_blank">This is me – 위대한 쇼맨</a></label></li>
+<li><label><input type="checkbox" name="song" value="Try Everything – 주토피아" /><a href="https://www.youtube.com/watch?v=c6rP-YP4c5I" target="_blank">Try Everything – 주토피아</a></label></li>
+<li><label><input type="checkbox" name="song" value="Your New Home - The Amazing Digital Cirucs" /><a href="https://www.youtube.com/watch?v=9peSeroXH-s" target="_blank">Your New Home - The Amazing Digital Cirucs</a></label></li>
+<li><label><input type="checkbox" name="song" value="すずめ (Suzume) – 스즈메의 문단속" /><a href="https://www.youtube.com/watch?v=Xs0Lxif1u9E" target="_blank">すずめ (Suzume) – 스즈메의 문단속</a></label></li>
+<li><label><input type="checkbox" name="song" value="너를 태우고 – 천공의 성 라퓨타" /><a href="https://www.youtube.com/watch?v=D2CRlGawlOI" target="_blank">너를 태우고 – 천공의 성 라퓨타</a></label></li>
+<li><label><input type="checkbox" name="song" value="바다가 보이는 마을 – 마녀 배달부 키키" /><a href="https://www.youtube.com/watch?v=zajkxWnnAaI" target="_blank">바다가 보이는 마을 – 마녀 배달부 키키</a></label></li>
+<li><label><input type="checkbox" name="song" value="벼랑 위의 포뇨 – 벼랑 위의 포뇨" /><a href="https://www.youtube.com/watch?v=GZXPGv0kOAQ" target="_blank">벼랑 위의 포뇨 – 벼랑 위의 포뇨</a></label></li>
+<li><label><input type="checkbox" name="song" value="산책 – 이웃집 토토로" /><a href="https://www.youtube.com/watch?v=YCpDQIi_VDY" target="_blank">산책 – 이웃집 토토로</a></label></li>
+<li><label><input type="checkbox" name="song" value="세계의 약속 – 하울의 움직이는 성" /><a href="https://www.youtube.com/watch?v=K1DCI7Fhums" target="_blank">세계의 약속 – 하울의 움직이는 성</a></label></li>
+<li><label><input type="checkbox" name="song" value="아시타카의 전설 – 원령공주" /><a href="https://www.youtube.com/watch?v=x8rl5hq6SBA" target="_blank">아시타카의 전설 – 원령공주</a></label></li>
+<li><label><input type="checkbox" name="song" value="어느 여름날 – 센과 치히로의 행방불명" /><a href="https://www.youtube.com/watch?v=qbuMbV1Rdo8" target="_blank">어느 여름날 – 센과 치히로의 행방불명</a></label></li>
+<li><label><input type="checkbox" name="song" value="오월의 마을 – 이웃집 토토로" /><a href="https://www.youtube.com/watch?v=oAoe-V1jjgw" target="_blank">오월의 마을 – 이웃집 토토로</a></label></li>
+<li><label><input type="checkbox" name="song" value="인생의 회전목마 – 하울의 움직이는 성" /><a href="https://www.youtube.com/watch?v=NXt-YY3Xt8Q" target="_blank">인생의 회전목마 – 하울의 움직이는 성</a></label></li>
       
       </ul>
-      <button type="submit">🎤 투표 제출</button>
+      <button type="submit" style="padding: 16px 32px; font-size: 20px;">🎤 투표 제출</button>
     </form>
     <hr style="margin: 30px 0;" />
     <p><a href="results.html">📊 실시간 결과 보기</a></p>
