--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         push(ref(db, "votes/" + song.replaceAll(".", "").replaceAll("/", "")), true);
       });
       alert("✅ 투표가 완료되었습니다!");
+      document.querySelectorAll("input[name='song']").forEach(cb => cb.checked = false);
     };
   </script>
 </head>
