--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     const db = getDatabase(app);
 
     window.submitVote = () => {
+      if (localStorage.getItem("voted") === "yes") {
+        alert("⚠️ 이미 투표하셨습니다. 한 번만 투표할 수 있어요!");
+        return;
+      }
+
       const checkboxes = document.querySelectorAll("input[name='song']:checked");
       if (checkboxes.length === 0) {
         alert("⚠️ 최소 한 곡 이상 선택해주세요!");
@@ -34,6 +39,7 @@
         push(ref(db, "votes/" + song.replaceAll(".", "").replaceAll("/", "")), true);
       });
       alert("✅ 투표가 완료되었습니다!");
+      localStorage.setItem("voted", "yes");
       document.querySelectorAll("input[name='song']").forEach(cb => cb.checked = false);
     };
   </script>
