--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     if (checkboxes.length === 0) {
       alert("⚠️ 최소 한 곡 이상 선택해주세요!");
     } else {
-      alert("🚫 이미 투표하셨습니다. 한 번만 투표할 수 있어요!");
+      alert("⚠️ 이미 투표하셨습니다. 한 번만 투표할 수 있어요!");
     }
     return;
   }
@@ -68,7 +68,7 @@
 <li><label><input type="checkbox" name="song" value="Steal The Show – 엘리멘탈" /><a href="https://www.youtube.com/watch?v=DwuJeGYlYyw" target="_blank">Steal The Show – 엘리멘탈</a></label></li>
 <li><label><input type="checkbox" name="song" value="This is me – 위대한 쇼맨" /><a href="https://www.youtube.com/watch?v=h2TLNdaQkL4" target="_blank">This is me – 위대한 쇼맨</a></label></li>
 <li><label><input type="checkbox" name="song" value="Try Everything – 주토피아" /><a href="https://www.youtube.com/watch?v=c6rP-YP4c5I" target="_blank">Try Everything – 주토피아</a></label></li>
-<li><label><input type="checkbox" name="song" value="Your New Home – The Amazing Digital Cirucs" /><a href="https://www.youtube.com/watch?v=9peSeroXH-s" target="_blank">Your New Home - The Amazing Digital Cirucs</a></label></li>
+<li><label><input type="checkbox" name="song" value="Your New Home - The Amazing Digital Cirucs" /><a href="https://www.youtube.com/watch?v=9peSeroXH-s" target="_blank">Your New Home - The Amazing Digital Cirucs</a></label></li>
 <li><label><input type="checkbox" name="song" value="すずめ (Suzume) – 스즈메의 문단속" /><a href="https://www.youtube.com/watch?v=Xs0Lxif1u9E" target="_blank">すずめ (Suzume) – 스즈메의 문단속</a></label></li>
 <li><label><input type="checkbox" name="song" value="너를 태우고 – 천공의 성 라퓨타" /><a href="https://www.youtube.com/watch?v=D2CRlGawlOI" target="_blank">너를 태우고 – 천공의 성 라퓨타</a></label></li>
 <li><label><input type="checkbox" name="song" value="바다가 보이는 마을 – 마녀 배달부 키키" /><a href="https://www.youtube.com/watch?v=zajkxWnnAaI" target="_blank">바다가 보이는 마을 – 마녀 배달부 키키</a></label></li>
