--- a/results.html
+++ b/results.html
@@ -101,9 +101,9 @@
   </script>
 </head>
 <body>
-  <div class="container" style="max-width: 450px;">
+  <div class="container" style="max-width: 600px; padding-top: 10px; padding-bottom: 10px;">
     <h1>📊 실시간 투표 결과</h1>
-    <canvas id="chart" width="280" height="500"></canvas>
+    <canvas id="chart" width="350" height="350"></canvas>
     <p><a href="index.html">← 다시 투표하기</a></p>
   </div>
 </body>
