--- a/results.html
+++ b/results.html
@@ -85,7 +85,7 @@
             }
           },
           responsive: true,
-          maintainAspectRatio: false,
+          maintainAspectRatio: true,
           scales: {
             x: {
               beginAtZero: true,
@@ -125,7 +125,7 @@
   <div class="container" style="max-width: 600px; padding-top: 10px; padding-bottom: 10px;">
     <h1>📊 실시간 투표 결과</h1>
     <div id="chart-wrapper">
-      <canvas id="chart"></canvas>
+      <canvas id="chart" width="350" height="600"></canvas>
     </div>
     <p><a href="index.html">← 다시 투표하기</a></p>
   </div>
