--- a/results.html
+++ b/results.html
@@ -114,7 +114,7 @@
   </script>
   <style>
     #chart-wrapper {
-      width: 100%;
+      width: 100%; height: auto;
       max-width: 600px;
       height: 450px;
       overflow-x: auto;
@@ -125,7 +125,7 @@
   <div class="container" style="max-width: 600px; padding-top: 10px; padding-bottom: 10px;">
     <h1>📊 실시간 투표 결과</h1>
     <div id="chart-wrapper">
-      <canvas id="chart" width="350" height="600"></canvas>
+      <canvas id="chart"></canvas>
     </div>
     <p><a href="index.html">← 다시 투표하기</a></p>
   </div>
