--- a/results.html
+++ b/results.html
@@ -85,7 +85,7 @@
             }
           },
           responsive: true,
-          maintainAspectRatio: true,
+          maintainAspectRatio: false,
           scales: {
             x: {
               beginAtZero: true,
@@ -96,10 +96,6 @@
             },
             y: {
               ticks: {
-                callback: function(value) {
-                  const words = value.split(" ");
-                  return words.length > 2 ? words.slice(0, 2).join(" ") + '...' : value;
-                },
                 color: "#000",
                 font: {
                   size: 11
@@ -114,7 +110,7 @@
   </script>
   <style>
     #chart-wrapper {
-      width: 100%; height: auto;
+      width: 100%;
       max-width: 600px;
       height: 450px;
       overflow-x: auto;
