--- a/results.html
+++ b/results.html
@@ -98,8 +98,10 @@
               ticks: {
                 color: "#000",
                 font: {
-                  size: 11
-                }
+                  size: 9
+                },
+                maxRotation: 0,
+                minRotation: 0
               }
             }
           }
@@ -121,7 +123,7 @@
   <div class="container" style="max-width: 600px; padding-top: 10px; padding-bottom: 10px;">
     <h1>📊 실시간 투표 결과</h1>
     <div id="chart-wrapper">
-      <canvas id="chart"></canvas>
+      <canvas id="chart" width="400" height="1000" style="max-width: 100%;"></canvas>
     </div>
     <p><a href="index.html">← 다시 투표하기</a></p>
   </div>
