--- a/results.html
+++ b/results.html
@@ -75,8 +75,9 @@
           plugins: {
             legend: { display: false },
             datalabels: {
-              anchor: 'start',
-              align: 'left',
+              anchor: 'end',
+              align: 'right',
+              offset: 20,
               color: '#000',
               font: {
                 weight: 'bold'
@@ -98,7 +99,7 @@
               ticks: {
                 color: "#000",
                 font: {
-                  size: 11
+                  size: 10
                 }
               }
             }
@@ -118,10 +119,10 @@
   </style>
 </head>
 <body>
-  <div class="container" style="max-width: 800px; padding-top: 10px; padding-bottom: 10px;">
+  <div class="container" style="max-width: 1000px; padding-top: 10px; padding-bottom: 10px;">
     <h1>📊 실시간 투표 결과</h1>
     <div id="chart-wrapper">
-      <canvas id="chart" width="600" height="1000" style="max-width: 100%;"></canvas>
+      <canvas id="chart" width="800" height="1000" style="max-width: 100%;"></canvas>
     </div>
     <p><a href="index.html">← 다시 투표하기</a></p>
   </div>
